# nebulastream

.github/workflows/: nightly.yml  pr.yml
docker/dependency/: Development.dockerfile
grpc/: SerializableVariantDescriptor.proto
nes-configurations/include/Configurations/: Descriptor.hpp
nes-configurations/src/Configurations/: Descriptor.cpp
nes-logical-operators/include/Operators/: SequenceLogicalOperator.hpp
nes-logical-operators/include/Plans/: LogicalPlanBuilder.hpp
nes-logical-operators/src/Operators/: SequenceLogicalOperator.cpp
nes-logical-operators/src/Plans/: LogicalPlanBuilder.cpp
nes-nebuli/: CMakeLists.txt
nes-nebuli/include/: LegacyOptimizer.hpp  StatementHandler.hpp
nes-nebuli/src/: NebuLIStarter.cpp
nes-physical-operators/include/: SequenceOperatorHandler.hpp  SequencePhysicalOperator.hpp  WindowBasedOperatorHandler.hpp  WindowBuildPhysicalOperator.hpp
nes-physical-operators/src/: SequenceOperatorHandler.cpp  SequencePhysicalOperator.cpp  WindowBasedOperatorHandler.cpp  WindowBuildPhysicalOperator.cpp  WindowProbePhysicalOperator.cpp
nes-plugins/: CMakeLists.txt
nes-plugins/Inference/IREE/src/: CMakeLists.txt  IREEBatchCacheInferenceOperator.cpp  IREEBatchInferenceOperator.cpp  IREEBatchInferenceOperatorHandler.cpp  IREECacheInferenceOperator.cpp  IREERuntimeWrapper.cpp  LowerToPhysicalIreeInference.cpp
nes-plugins/Inference/IREE/src/PredictionCache/: PredictionCache.cpp  PredictionCache2Q.cpp  PredictionCacheFIFO.cpp  PredictionCacheLFU.cpp  PredictionCacheLRU.cpp  PredictionCacheSecondChance.cpp
nes-plugins/Inference/IREE/src/PredictionCacheBatch/: CMakeLists.txt  PredictionCacheBatch.cpp  PredictionCacheBatch2Q.cpp  PredictionCacheBatchFIFO.cpp  PredictionCacheBatchLFU.cpp  PredictionCacheBatchLRU.cpp  PredictionCacheBatchSecondChance.cpp  PredictionCacheBatchUtil.cpp
nes-query-optimizer/include/: QueryExecutionConfiguration.hpp
nes-runtime/include/: ExecutionContext.hpp
nes-runtime/src/: ExecutionContext.cpp
nes-single-node-worker/include/: GoogleEventTracePrinter.hpp
nes-single-node-worker/src/: SingleNodeWorkerStarter.cpp
nes-sinks/src/: FileSink.cpp  PrintSink.cpp
nes-sql-parser/: AntlrSQL.g4
nes-sql-parser/src/: AntlrSQLQueryPlanCreator.cpp
nes-systests/inference/: caching.test  iris8exp.test  irisexp.test  operators.test
vcpkg/: vcpkg.json
(+51 files in other folders)
